[gd_scene load_steps=17 format=3 uid="uid://bjteq07i0vf8m"]

[ext_resource type="Script" uid="uid://cbg7uu84mlv15" path="res://Main/Characters/Enemies/IshimCrawler/ishim_crawler.gd" id="1_lgyoi"]
[ext_resource type="Material" uid="uid://cv7l0r86mk435" path="res://assets/materials/hitflash_mat.tres" id="1_ovggl"]
[ext_resource type="Script" uid="uid://v8gickpnd8q0" path="res://Main/Utility/Components/health_component.gd" id="3_oaf2w"]
[ext_resource type="Script" uid="uid://cgpmhci7164s6" path="res://Main/Utility/Components/hitbox_component.gd" id="4_kebby"]
[ext_resource type="Shader" uid="uid://cxpcdyu7soiyp" path="res://assets/shaders/thank_you_uslash_theduriel.gdshader" id="5_ocuuy"]
[ext_resource type="Texture2D" uid="uid://cvhnevicnsrn3" path="res://assets/sprites/ishim/crawler/ishim-crawler-Sheet.png" id="6_jxkrc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vrbru"]
albedo_color = Color(0.254902, 0.521569, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vd578"]
material = SubResource("StandardMaterial3D_vrbru")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c7tqt"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kebby"]
radius = 0.751309
height = 2.27475

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lrlfc"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("5_ocuuy")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/texture_albedo = ExtResource("6_jxkrc")
shader_parameter/albedo_texture_size = Vector2i(64, 64)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = Vector4(1, 0, 0, 0)
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/hitflash_amount = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pi4tm"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("5_ocuuy")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/texture_albedo = ExtResource("6_jxkrc")
shader_parameter/albedo_texture_size = Vector2i(64, 64)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = Vector4(0, 0, 0, 0)
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/hitflash_amount = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_vabjx"]
atlas = ExtResource("6_jxkrc")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjb5h"]
atlas = ExtResource("6_jxkrc")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyalr"]
atlas = ExtResource("6_jxkrc")
region = Rect2(128, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_t28ud"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vabjx")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjb5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyalr")
}],
"loop": true,
"name": &"walk",
"speed": 2.0
}]

[node name="IshimCrawler" type="CharacterBody3D" groups=["Enemies"]]
collision_layer = 4
script = ExtResource("1_lgyoi")
lunge_dist = 10
max_health = 5.0
movement_speed = 6
hitflash_material = ExtResource("1_ovggl")
twoD_hitflash_amount = 5.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="." groups=["Enemies"]]
visible = false
material_overlay = ExtResource("1_ovggl")
mesh = SubResource("CapsuleMesh_vd578")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_c7tqt")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_oaf2w")

[node name="HitboxComponent" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 9
script = ExtResource("4_kebby")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape3D_kebby")

[node name="PathfindTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="LungeTimer" type="Timer" parent="."]
wait_time = 1.2

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(3.885, 0, 0, 0, 3.885, 0, 0, 0, 3.885, 0, 0, 0)
visible = false
material_override = SubResource("ShaderMaterial_lrlfc")
billboard = 1
texture_filter = 0
texture = ExtResource("6_jxkrc")
hframes = 3

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1.725, 0, 0, 0, 1.725, 0, 0, 0, 1.725, 0, 0, 0)
material_override = SubResource("ShaderMaterial_pi4tm")
billboard = 1
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_t28ud")
animation = &"walk"
frame_progress = 0.489645

[connection signal="body_entered" from="HitboxComponent" to="." method="_on_hitbox_component_body_entered"]
[connection signal="timeout" from="PathfindTimer" to="." method="_on_pathfind_timer_timeout"]
[connection signal="timeout" from="LungeTimer" to="." method="_on_lunge_timer_timeout"]
